<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		style="@style/TitleBar">

		<ImageButton
			style="@style/TitleBarAction"
			android:contentDescription="@string/description_home"
			android:src="@drawable/ic_title_home"
			android:onClick="onHomeClick" />

		<ImageView
			style="@style/TitleBarSeparator" />

		<TextView
			style="@style/TitleBarText" 
			android:text="@string/title_my_fridge"/>

		<ImageView
			style="@style/TitleBarSeparator" />

		<ImageButton
			style="@style/TitleBarAction"
			android:id="@+id/btn_title_add"
			android:contentDescription="@string/description_add"
			android:src="@drawable/ic_title_add"
			android:onClick="onAddItemsClick" />

		<ImageView
			style="@style/TitleBarSeparator" />

		<ImageButton
			style="@style/TitleBarAction"
			android:id="@+id/btn_title_refresh"
			android:contentDescription="@string/description_refresh"
			android:src="@drawable/ic_title_refresh"
			android:onClick="onRefreshClick" />

		<ProgressBar
			style="@style/TitleBarProgressIndicator"
			android:id="@+id/title_refresh_progress"
			android:visibility="gone" />

	</LinearLayout>

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	
		<ListView
			android:id="@android:id/list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
	
		<TextView
			android:id="@android:id/empty"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/empty_fridge"
			android:gravity="center"
			android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>

</LinearLayout>